Update Web3 to 2.0.4, show FailedTXBubbles in block page when conflicted txs exist

--- a/apps/explorer/locales/en-US/translation.json
+++ b/apps/explorer/locales/en-US/translation.json
@@ -141,5 +141,6 @@
   "Group(s)": "Group(s)",
   "All": "All",
   "Group {{ number }}": "Group {{ number }}",
-  "Group transfer": "Group transfer"
+  "Group transfer": "Group transfer",
+  "Conflicted transaction": "Conflicted transaction"
 }
