Added "conflicted" labels to conflicted transactions

--- a/apps/explorer/locales/en-US/translation.json
+++ b/apps/explorer/locales/en-US/translation.json
@@ -142,5 +142,6 @@
   "All": "All",
   "Group {{ number }}": "Group {{ number }}",
   "Group transfer": "Group transfer",
+  "Conflicted": "Conflicted",
   "Conflicted transaction": "Conflicted transaction"
 }
