Show last activity in address details modal

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -502,5 +502,7 @@
   "Groupless": "Groupless",
   "New": "New",
   "App cache": "App cache",
-  "Delete app cached data and reload.": "Delete app cached data and reload."
+  "Delete app cached data and reload.": "Delete app cached data and reload.",
+  "Never used": "Never used",
+  "Last activity": "Last activity"
 }
