Show warning when scanning wrong QR code
Closes #251

--- a/apps/mobile-wallet/locales/en-US/translation.json
+++ b/apps/mobile-wallet/locales/en-US/translation.json
@@ -508,5 +508,7 @@
   "Unknown address": "Unknown address",
   "The destination address has never been used before and does not appear in your transaction history. Please, ensure the address is correct before sending.": "The destination address has never been used before and does not appear in your transaction history. Please, ensure the address is correct before sending.",
   "The app can adjust the brightness when displaying QR codes.": "The app can adjust the brightness when displaying QR codes.",
-  "Allow": "Allow"
+  "Allow": "Allow",
+  "This is not the QR code you are looking for.": "This is not the QR code you are looking for.",
+  "To import from the desktop wallet, find the \"Export current wallet\" feature in the desktop wallet app settings.": "To import from the desktop wallet, find the \"Export current wallet\" feature in the desktop wallet app settings."
 }
