Allow browsing dApp from search bar
Closes #1552

--- a/apps/mobile-wallet/locales/de-DE/translation.json
+++ b/apps/mobile-wallet/locales/de-DE/translation.json
@@ -464,7 +464,7 @@
   "nfts_in_addresses_other": "{{ count }} NFTs",
   "Did you know?": "Schon gewusst?",
   "Splitting your funds into multiple addresses can help you stay organized and increase privacy.": "Die Aufteilung des Guthabens in mehrere Adressen kann Ihnen helfen, die Privatsphäre zu verbessern und zu organisieren.",
-  "No dApps match your search: \"{{ searchText }}\"": "Keine dApps stimmen mit Ihrer Suche überein: \"{{ searchText }}\"",
+  "No dApps match your search": "Keine dApps stimmen mit Ihrer Suche überein",
   "Visit dApp": "dApp besuchen",
   "Region": "Region",
   "Choose your region to update formats of dates, time, and currencies.": "Wählen Sie Ihre Region aus, um Datums-, Zeit- und Währungsformate zu aktualisieren.",
